# anilist-user-analytics

./: .gitignore  README.md  package-lock.json  scripts.sh
anilist-user-analytics/: README.md
anilist-user-analytics/src/: styles.css
anilist-user-analytics/src/components/: ChartPanel.tsx  FiltersPanel.tsx
anilist-user-analytics/src/lib/: transform.ts  types.ts
anime-heatmap/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
anime-heatmap/src/: App.tsx  main.tsx  styles.css
anime-heatmap/src/api/: anilist.ts  queries.ts
anime-heatmap/src/components/: FiltersPanel.tsx  StatsGrid.tsx
anime-heatmap/src/components/charts/: GenreBarChart.tsx  HeatmapChart.tsx  StudioBarChart.tsx
anime-heatmap/src/lib/: transform.ts  types.ts
migration/: .gitignore  README.md  pyproject.toml
migration/src/malexportus/: cli.py
src/: App.tsx  main.tsx  styles.css
src/api/: queries.ts
src/components/: StatsGrid.tsx
src/components/charts/: GenreBarChart.tsx  HeatmapChart.tsx  LagHistogramChart.tsx  OriginalCreatorBarChart.tsx  StudioBarChart.tsx  YearBarChart.tsx
src/lib/: transform.ts  types.ts
