[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "malexportus"
version = "0.1.0"
description = "Merge MyAnimeList XML exports with malexport history into a usable watch-history report."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "malexport==0.1.6",
]

[project.scripts]
malexportus = "malexportus.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
